Fix location and improve height on mobile

--- a/src/Components/SpeedDialWrapper.scss
+++ b/src/Components/SpeedDialWrapper.scss
@@ -1,5 +1,5 @@
 .speed-dial {
-    position: absolute;
+    position: fixed;
     bottom: 18px;
     right: 18px;
 }
